; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_drm_gfx.c_drm_set_aspect_ratio.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_drm_gfx.c_drm_set_aspect_ratio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { float }
%struct.drm_video = type { float, i32, i64, i32 }

@aspectratio_lut = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @drm_set_aspect_ratio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drm_set_aspect_ratio(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.drm_video*, align 8
  %6 = alloca float, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.drm_video*
  store %struct.drm_video* %8, %struct.drm_video** %5, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @aspectratio_lut, align 8
  %10 = load i32, i32* %4, align 4
  %11 = zext i32 %10 to i64
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load float, float* %13, align 4
  store float %14, float* %6, align 4
  %15 = load %struct.drm_video*, %struct.drm_video** %5, align 8
  %16 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %15, i32 0, i32 0
  %17 = load float, float* %16, align 8
  %18 = load float, float* %6, align 4
  %19 = fcmp une float %17, %18
  br i1 %19, label %20, label %44

20:                                               ; preds = %2
  %21 = load float, float* %6, align 4
  %22 = load %struct.drm_video*, %struct.drm_video** %5, align 8
  %23 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %22, i32 0, i32 0
  store float %21, float* %23, align 8
  %24 = load %struct.drm_video*, %struct.drm_video** %5, align 8
  %25 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %24, i32 0, i32 3
  %26 = load i32, i32* %25, align 8
  %27 = load float, float* %6, align 4
  %28 = call i32 @drm_surface_set_aspect(i32 %26, float %27)
  %29 = load %struct.drm_video*, %struct.drm_video** %5, align 8
  %30 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %29, i32 0, i32 2
  %31 = load i64, i64* %30, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %43

33:                                               ; preds = %20
  %34 = load %struct.drm_video*, %struct.drm_video** %5, align 8
  %35 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load float, float* %6, align 4
  %38 = call i32 @drm_surface_set_aspect(i32 %36, float %37)
  %39 = load %struct.drm_video*, %struct.drm_video** %5, align 8
  %40 = getelementptr inbounds %struct.drm_video, %struct.drm_video* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = call i32 @drm_plane_setup(i32 %41)
  br label %43

43:                                               ; preds = %33, %20
  br label %44

44:                                               ; preds = %43, %2
  ret void
}

declare dso_local i32 @drm_surface_set_aspect(i32, float) #1

declare dso_local i32 @drm_plane_setup(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
